# mobilise-recommender-service

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
recommender/: app.py  config.py  engine.py  mobiliseapi.py
recommender/models/: bookings.py  roles.py  shift_requirements.py  shifts.py  volunteers.py
recommender/resources/: recommendations.py
recommender/tests/: test_recommendations_resource.py
tests/: test_mobilise_recommender_service.py
